# ml_filter

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
configs/: default_values.yaml  lorem_ipsum.yaml
configs/annotation/: lorem_ipsum.yaml  lorem_ipsum_annotation_pipeline.yaml  lorem_ipsum_annotation_pipeline_slurm.yaml  lorem_ipsum_embedding.yaml  lorem_ipsum_embedding_leonardo.yaml  lorem_ipsum_embedding_mmbert.yaml  lorem_ipsum_embedding_mmbert_minority_lang.yaml  lorem_ipsum_embedding_mmbert_slurm.yaml  lorem_ipsum_embedding_pipeline_slurm.yaml  lorem_ipsum_embedding_snowflake.yaml
configs/data_processing/: example_filter_pipeline_config.yaml  example_sampling_pipeline_config.yaml  xlm_roberta_tokenize.yaml
configs/score_documents/: adult_content_config.yaml  adult_content_config_local.yaml  adult_content_config_openai.yaml  compare_experiments_config.yaml  lorem_ipsum.yaml  pii_content_config.yaml  toxic_config.yaml
configs/train_classifier/: annotated_fineweb_data.yaml  fineweb.yaml  fineweb_edu.yaml  fineweb_edu_large.yaml  fineweb_edu_paper_v2.0_snowflake_test.yaml  fineweb_test_new.yaml  lorem_ipsum.yaml  train_regression_head.yaml  train_test.yaml
data/: 25_test_documents_de.jsonl  25_test_documents_en.jsonl  25_test_documents_random.jsonl  511_en.jsonl  cc_subset_100000_docs.json  cc_subset_10000_docs.json  compute_cc_dump_stats.py  convert_ml_filter_jsonl.ipynb  create_dataset_multiscore.py  create_dummy_dataset.py  deu_Latn_sampled_500k_first200.jsonl  deu_Latn_sampled_500k_first_200.jsonl  dev_data_ml_filter_511_head_100.jsonl  example_annotations.jsonl  load_human_eval_dataset.ipynb  lorem_ipsum.jsonl  lorem_ipsum_multiscore.jsonl  nob_Latn_sampled_500k_first200.jsonl  sample_fineweb_gt_data.py  test_data_ml_filter_511.json  test_data_ml_filter_511.jsonl  test_fineweb2_dump.jsonl
data/fineweb_test/: annotated_fineweb_multi_test_1k.jsonl  annotated_fineweb_multi_train_1k.jsonl  annotated_fineweb_multi_val_1k.jsonl
data/human_annotations/: 511_test_dcocuments_educational_content.jsonl  human_annotations_eurolingua.jsonl  human_annotations_fineweb_edu_511.jsonl  humna_annotations_eurolingua.jsonl
documentation/: aggregation.md  data_format.md  evaluation.md  pipelines.md
documentation/diagrams/: ml_filters.drawio
experiments/llama_mistral_5percent/: score_comparison.ipynb
notebooks/: analyze_human_annotations.ipynb  compare_results.ipynb  edu_content_human_as_a_judge.ipynb  visualize_document_emebddings.ipynb
scripts/: aggregate_human_annotations.py  classifier.py  collect_ir_metrics.py  collect_ir_metrics_multilingual.py  concatenate_jsonl.sh  convert_id_to_doc_id.ipynb  download_models.ipynb  evaluate_prompt_based_annotations.py  evaluate_prompt_based_annotations_multilingual.py  host_vllm_model.sh  llama_run.py  lms_llama_run.py  max_prompt_tokens.ipynb  mixtral_run.py  organize_experiment_output.py  sync_models_to_mn5.sh  test_jq_pattern.ipynb  validate_jsonl.py
scripts/config/: app_config.yaml  default_values.yaml
scripts/data_processing/: convert_annotated_fineweb.py
scripts/interfaces/: document_processor_interface.py  llama_interface.py  (+2 more)
src/: constants.py
tests/: conftest.py  test_aggregate_scores.py  test_analysis_utils.py  test_annotator_model_pipeline.py  test_annotator_models.py  test_classifier_training_pipeline.py  test_collect_ir_metrics.py  test_compare_experiments.py  test_data_models.py  test_deduplication.py  test_document_processor.py  test_document_processory.py  test_hash_data_files.py  test_interrater_reliability.py  test_llm_score_metric.py  test_plot_score_distributions.py  test_sample_from_hf_dataset.py  test_translate.py  test_utils.py
tutorials/: score_comparison.ipynb
(+324 files in other folders)
