[project]
name = "ml-filter"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
description = "ML Filter, a python framework for filtering websites containing educational content."
dependencies = [
    "hydra-core",
    "requests",
    "tqdm",
    "datasets",
    "pydantic",
    "transformers==4.42.3",
    "click",
    "click_pathlib",
    "Jinja2",
    "accelerate>=0.21.0"
]

[project.optional-dependencies]
linting = ["pre-commit"]
tests = ["pytest", "pytest-cov"]
install_helper = ["ninja"]

[project.scripts]
modalities = "modalities.__main__:main"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report term --cov-report html"

[tool.coverage.run]
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]


ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"